--- a/src/App.css
+++ b/src/App.css
@@ -5,8 +5,7 @@
   --clr-primary-3: hsl(205, 72%, 37%);
   --clr-primary-4: hsl(205, 63%, 48%);
   /* primary/main color */
-  --clr-primary-5: #49a6e9;
-  /* --clr-primary-5: rgb(73, 166, 233); */
+  --clr-primary-5: hsl(205, 78%, 60%);
   /* lighter shades of primary color */
   --clr-primary-6: hsl(205, 89%, 70%);
   --clr-primary-7: hsl(205, 90%, 76%);
@@ -76,6 +75,12 @@ h3 {
 }
 h4 {
   font-size: 0.875rem;
+}
+
+@media screen and (min-width: 800px) {
+
+table {
+width: 65rem;
 }
 
 tr {
@@ -158,3 +163,92 @@ th{
   transform: scale(1.3);
 }
 
+}
+
+@media screen and (min-width:400px) {
+
+  table {
+  width: 65rem;
+  }
+  
+  tr {
+    margin: 0;
+    color: var(--clr-grey-5);
+    box-shadow: var( --light-shadow);
+  }
+  
+  main {
+    display: grid;
+    place-items: center;
+  }
+  
+  .btn {
+    text-transform: uppercase;
+    background: var(--clr-primary-6);
+    color: var(--clr-white);
+    padding: 0.375rem 0.75rem;
+    letter-spacing: var(--spacing);
+    display: inline-block;
+    transition: var(--transition);
+    font-size: 0.700rem;
+    border: 2px solid var(--clr-primary-6);
+    cursor: pointer;
+    box-shadow: var( --dark-shadow);
+    border-radius: var(--radius);
+    margin: 15px;
+  }
+  .btn:hover {
+    color: var(--clr-primary-6);
+    background: transparent;
+  }
+  
+  .banner {
+    background: var(--clr-white);
+    padding: 4rem 3rem;
+    border-radius: var(--radius);
+    box-shadow: var(--light-shadow);
+    margin: 3rem;
+    text-align: center;
+    width: fit-content;
+    height: 10rem;
+    overflow: auto;
+    scroll-behavior: smooth;
+  }
+  
+  th{
+    padding: 1rem;
+  }
+  
+  .buttons{
+    padding: 1rem;
+  }
+  
+  .modal-container {
+    background: rgba(73, 166, 233, 0.5);
+    border-radius: var(--radius);
+    max-width: var(--fixed-width);
+    text-align: center;
+    display: grid;
+    place-items: center;
+    position: relative;
+    margin: 15rem 10rem 15rem 20rem;
+  }
+  
+  .close-btn {
+    position: absolute;
+    top: 1rem;
+    right: 1rem;
+    font-size: 2rem;
+    background: transparent;
+    border-color: transparent;
+    color: var(--clr-red-dark);
+    cursor: pointer;
+    transition: var(--transition);
+  }
+  
+  .close-btn:hover {
+    color: var(--clr-red-light);
+    transform: scale(1.3);
+  }
+  
+  }
